helloworld/helloworld-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-stable
  namespace: helloworld
spec:
  ports:
    - port: 80
      targetPort: 5000
      name: http
  selector:
    app: helloworld
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-canary
  namespace: helloworld
spec:
  ports:
    - port: 80
      targetPort: 5000
      name: http
  selector:
    app: helloworld
