helloworld/helloworld-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: helloworld-vs
  namespace: helloworld
spec:
  hosts:
    - "helloworld.34.77.219.249.nip.io"
  gateways:
    - istio-system/bookinfo-gateway
  http:
    - name: primary-route
      route:
        - destination:
            host: helloworld-stable
          weight: 100
        - destination:
            host: helloworld-canary
          weight: 0
